--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,50 @@
 theme: jekyll-theme-midnight
+permalink: /blog/:title
+
+title: Gloomnight Grove
+email: roleandroflores12@gmail.com
+description: >- # this means to ignore newlines until "baseurl:"
+  A blog to document updates on the development of Gloomnight Grove.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "gloomnightgrove.com" # the base hostname & protocol for your site, e.g. http://example.com
+github_username:  roberto-leandro
+
+# Build settings
+markdown: kramdown
+theme: minima
+plugins:
+  - jekyll-feed
+
+
+# Reading Files
+include:
+  - .htaccess
+  - _pages
+  - assets/unity
+  
+  
+  
+plugins:
+  - jekyll-sitemap
+  
+  
+whitelist:
+  - jekyll-sitemap
+  
+  
+  
+  
+  
+# Defaults
+defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: # true
+      share: true
+      related: true
