--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,8 @@
-theme: jekyll-theme-midnight
-permalink: /blog/:title
-
+# Main info
 title: Gloomnight Grove
-email: roleandroflores12@gmail.com
+email: #roleandroflores12@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  A blog to document updates on the development of Gloomnight Grove.
+  A blog to document updates on the development of Gloomnight Grove video game.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "gloomnightgrove.com" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  roberto-leandro
@@ -12,9 +10,22 @@ github_username:  roberto-leandro
 # Build settings
 markdown: kramdown
 theme: minima
-plugins:
-  - jekyll-feed
 
+# Minima settings
+minima:
+  date_format: "%b %-d, %Y"
+
+# Build settings
+theme: minima
+plugins:
+ - jekyll-feed
+ - jekyll-seo-tag
+ #- jekyll-sitemap
+
+whitelist:
+ - jekyll-feed
+ - jekyll-seo-tag
+ #- jekyll-sitemap
 
 # Reading Files
 include:
@@ -22,22 +33,10 @@ include:
   - _pages
   - assets/unity
   
-  
-  
-plugins:
-  - jekyll-sitemap
-  
-  
-whitelist:
-  - jekyll-sitemap
-  
-  
-  
-  
-  
+header_subtitle: "Development blog"
+
 # Defaults
 defaults:
-  # _posts
   - scope:
       path: ""
       type: posts
